:test_tube: test: Tests for counter actions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/style/pico.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FSO2022 - Counter</title>
+    <title>FSO2022 - Vite React JS Minimal Template</title>
   </head>
   <body>
     <div id="root"></div>
